@@ -7,6 +7,7 @@
     toolchain
   * BARControl: fixed abort restore: close dialog
   * BARControl: fixed restore dialog values
+  * BARCOntrol: fixed total progress count/size
 
 2024-11-10 25a
   * fixed key constrain failed on database import (bug #16)
